header bar style

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <!-- header -->
     <div class="header">
       <ul class="header__list">
-        <li class="header__list-item">All</li>
+        <li class="header__list-item header__list-item--inverted">All</li>
         <li class="header__list-item">Advertising</li>
-        <li class="header__list-item">Dev & Research</li>
+        <li class="header__list-item">Development & Research</li>
         <li class="header__list-item">Goals</li>
       </ul>
     </div>
@@ -52,7 +52,7 @@
       <div class="cards__card">
         <h2 class="card__title">Inclusive Web Design</h2>
         <div class="card__footer">
-          <span class="price">$99/</span>
+          <span class="price">$99/month</span>
           <span class="length">3month</span>
         </div>
       </div>
