Finalized a each grid items design

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- cards -->
     <div class="cards">
       <div class="cards__card">
-        <h2 class="card__title">The making of the modern Art</h2>
+        <h2 class="card__title">The making of modern Art</h2>
         <div class="card__footer">
           <span class="price">Free</span>
           <span class="length">2</span>
@@ -38,7 +38,7 @@
       <div class="cards__card">
         <h2 class="card__title">Graphic Design</h2>
         <div class="card__footer">
-          <span class="price">$199/month</span>
+          <span class="price">$199</span>
           <span class="length">9month</span>
         </div>
       </div>
@@ -53,7 +53,7 @@
         <h2 class="card__title">Inclusive Web Design</h2>
         <div class="card__footer">
           <span class="price">$99/month</span>
-          <span class="length">3month</span>
+          <span class="length">3</span>
         </div>
       </div>
       <div class="cards__card">
