--- a/index.html
+++ b/index.html
@@ -5,65 +5,92 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/styles/style.scss">
-  <title>Vite App</title>
+  <title>Vite App 2</title>
 </head>
 
 <body>
   <div class="phone">
+    
     <!-- header -->
     <div class="header">
-      <ul class="header__list">
-        <li class="header__list-item header__list-item--inverted">All</li>
-        <li class="header__list-item">Advertising</li>
-        <li class="header__list-item">Development & Research</li>
-        <li class="header__list-item">Goals</li>
-      </ul>
+      <span class="header__btn">👈🏻</span>
+      <h1 class="header__title">My Cart</h1>
+      <span class="header__btn">🛒</span>
     </div>
-    <!-- cards -->
-    <div class="cards">
-      <div class="cards__card">
-        <h2 class="card__title">The making of modern Art</h2>
-        <div class="card__footer">
-          <span class="price">Free</span>
-          <span class="length">2</span>
+
+    <!-- total -->
+    <section class="total">
+      <span class="total__price">$3550</span>
+      <span class="total__subtitle">based on your 5 items.</span>
+    </section>
+
+    <!-- Items -->
+    <section class="items">
+      <article class="item">
+        <div class="item__info">
+          <div class="item__info-col">
+            <h2 class="item__title">
+              Pop Temple Print T-Shirt
+            </h2>
+            <h3 class="item__subtitle">
+              limited 2002
+            </h3>
+          </div>
+          <div class="item__info-col">
+            <span class="item__total-price">
+              $1990
+            </span>
+            <div class="item__piece-price">
+              $995 per piece
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="cards__card">
-        <h2 class="card__title">Mobile Interfaces Advanced</h2>
-        <div class="card__footer">
-            <span class="price">Free</span>
-            <span class="length">2</span>
+        <div class="item__specs">
+          <div class="spec">
+            <span class="spec__title">Size</span>
+            <div class="spec__value">48 - L</div>
+          </div>
+          <div class="spec">
+            <span class="spec__title">QT</span>
+            <div class="spec__value">2 pcs</div>
+          </div>
         </div>
-      </div>
-      <div class="cards__card">
-        <h2 class="card__title">Graphic Design</h2>
-        <div class="card__footer">
-          <span class="price">$199</span>
-          <span class="length">9month</span>
+        <img src="https://source.unsplash.com/random" class="item__photo" />
+      </article>
+
+      <!-- Item 2 -->
+      <article class="item">
+        <div class="item__info">
+          <div class="item__info-col">
+            <h2 class="item__title">
+              Pop Temple Print T-Shirt
+            </h2>
+            <h3 class="item__subtitle">
+              limited 2002
+            </h3>
+          </div>
+          <div class="item__info-col">
+            <span class="item__total-price">
+              $1990
+            </span>
+            <div class="item__piece-price">
+              $995 per piece
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="cards__card">
-        <h2 class="card__title">Web Design Junior</h2>
-        <div class="card__footer">
-          <span class="price">Free</span>
-          <span class="length">3</span>
+        <div class="item__specs">
+          <div class="spec">
+            <span class="spec__title">Size</span>
+            <div class="spec__value">48 - L</div>
+          </div>
+          <div class="spec">
+            <span class="spec__title">QT</span>
+            <div class="spec__value">2 pcs</div>
+          </div>
         </div>
-      </div>
-      <div class="cards__card">
-        <h2 class="card__title">Inclusive Web Design</h2>
-        <div class="card__footer">
-          <span class="price">$99/month</span>
-          <span class="length">3</span>
-        </div>
-      </div>
-      <div class="cards__card">
-        <h2 class="card__title">Machine Learning</h2>
-        <div class="card__footer">
-          <span class="price">$199/month</span>
-          <span class="length">9month</span>
-        </div>
-      </div>
-    </div>
+        <img src="https://source.unsplash.com/random" class="item__photo" />
+      </article>
+    </section>
 
   </div>
 </body>
