--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
             </div>
           </div>
         </div>
+
+        <!-- specs -->
         <div class="item__specs">
           <div class="spec">
             <span class="spec__title">Size</span>
